<resources>
    <string name="app_name">Myhealth</string>
    <string name="enter">Enter your name</string>
    <string name="ADD">What med would you like to add?</string>
    <string name="hintmednam">Medicine Name</string>
    <string name="next">Next</string>
    <string name="fill">What form is the med?</string>
    <string name="strength">What strength is the med?</string>
    <string name="why">What are you taking it for?</string>
    <string name="everyday">Do you need to take this med every day?</string>
    <string name="threetimes">3 times a day</string>
    <string name="twotimes">Twice daily</string>
    <string name="oncedaily">Once daily</string>
    <string name="fourtimes">4 times a day</string>
    <string name="sixtimes">6 times a day</string>
    <string name="sixhours">Every 6 hours</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Inhaler">Inhaler</string>
    <string name="Drops">Drops</string>
    <string name="Powder">Powder</string>
    <string name="Injection">Injection</string>
    <string name="Solution">Solution</string>
    <string name="pill">Pill</string>
    <string name="timeinday">At what time of day do you take your Med</string>
    <string name="firstdose">first dose?</string>
    <string name="Morning">Morning</string>
    <string name="Noon">Noon</string>
    <string name="Evening">evening</string>
    <string name="Night">Night</string>
    <string name="set_time">When do you need to take the dose?</string>
    <string name="Dose">First Dose</string>
    <string name="medleft">When should we remind you to refill your prescription?</string>
    <string name="medamount">How many pills do you have left?</string>
    <string name="Pillsleft">Left</string>
    <string name="pillsleft">Pill (s) Left</string>
    <string name="Remindwhen">Remind me when I have :</string>
    <string name="Lasttaken">Last Taken</string>
    <string name="date">date</string>
    <string name="Reminder">Reminder</string>
    <string name="Condition">Condition</string>
    <string name="Refilldisplay">Prescripiton Refill</string>
    <string name="remindertxt">No refill reminder</string>
    <string name="suspend">Suspend</string>
    <string name="refilbtn">Refill</string>
    <string name="adddose">Add dose</string>
    <string name="howoften">How often do you take it?</string>
    <string name="onceweek">Once a week</string>
    <string name="Every2days">Every 2 days</string>
    <string name="twodaysaweek">2 days a week</string>
    <string name="threedaysaweek">3 days a week</string>
    <string name="every28days">Every 28 days</string>
    <string name="fivedaysaweek">5 days a week</string>
    <string name="chooseday">On which days(s) do you need to take the med?</string>
    <string name="setdate">"Set start date - "</string>
    <string name="medname">Medication Name</string>
    <string name="ReminderTimes">Reminder Times</string>
    <string name="edittime">Edit Time</string>
    <string name="Schedule">Schedule</string>
    <string name="NumberofDays">number of days</string>
    <string name="Duration">Duration</string>
    <string name="Everydaycheckbox">Everyday</string>
    <string name="Specificdays">Specific days of the week</string>
    <string name="Strenghttxt">Strength</string>
    <string name="prescriptionrefill">Prescription Refill</string>
    <string name="days">Days</string>


    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string name="facebook_app_id">715478893159079</string>
    <string name="fb_login_protocol_scheme">fb715478893159079</string>


    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_log_in">LogIn</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="login">Login</string>
    <string name="forgot_your_password"><u>forgot your password ?</u></string>
    <string name="medical_care">Medical Care</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="continue_as">continue as</string>
    <string name="continue_with_facebook">Continue With Facebook</string>
    <string name="continue_with_gmail">Continue with Gmail</string>
    <string name="by_continue_you_agree_with_our_policy">by continue you agree with our policy</string>
    <string name="continue_as_a_guest">Continue As A Guest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">Ok</string>
    <string name="and_we_will_send_you_a_mail_if_the_mail_exists">and we will send you a mail if the mail exists .</string>
    <string name="enter_your_email">Enter your email ,</string>
    <string name="cancle">Cancel</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="back">Back</string>
    <string name="phone">Phone</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="finish">Finish</string>
    <string name="specificdays">Specific Days</string>
    <string name="instructionadd">Do you want to add any instructions?</string>
    <string name="Save">Save</string>
    <string name="Refilldisplaytxt">Refill your prescription</string>
    <string name="txt_active_medicines">Active Medicines</string>
    <string name="txt_inactive_meds_rv_title">Inactive Medicines</string>
    <string name="add_medicine_btn_medList">Add Medicine</string>
    <string name="snooze">Snooze</string>
    <string name="Skip">Skip</string>
    <string name="btntake">Take</string>
    <string name="SetAlarm">Set Alarm</string>
    <string name="instruction">Instructions</string>
    <string name="profile">Profile</string>
    <string name="nameProfile">Name</string>
    <string name="na">NA</string>
    <string name="emailProfile">Email</string>
    <string name="date_of_birth_profile">Date Of Birth</string>
    <string name="genderProfile">Gender</string>
    <string name="phoneProfile">Phone</string>
    <string name="txt_skip_refill_reminder">Skip</string>
    <string name="txt_refillrefill_reminder">Refill</string>
    <string name="txt_snooze_refill_reminder">Snooze</string>
    <string name="txt_request_list_title">Requests</string>
    <string name="txt_med_friend_title">My Friends</string>
</resources>