<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4f5bd5"
    android:backgroundTint="#4F5BD5"
    android:rotation="-360"
    android:rotationX="-360"
    android:rotationY="-360">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="426dp"
        android:layout_height="467dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/background" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="389dp"
        android:layout_height="82dp"
        android:text="@string/timeinday"
        android:textAlignment="inherit"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.295" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="62dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pills" />

    <Button
        android:id="@+id/Morning"
        android:layout_width="292dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#4f5bd5"
        android:text="@string/Morning"
        android:textColorHighlight="#112C42"
        app:layout_constraintBottom_toTopOf="@+id/Noon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Noon"
        android:layout_width="292dp"
        android:layout_height="48dp"
        android:layout_marginTop="122dp"
        android:layout_marginBottom="298dp"
        android:backgroundTint="#4f5bd5"
        android:text="@string/Noon"
        android:textColorHighlight="#112C42"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <Button
        android:id="@+id/Evening"
        android:layout_width="292dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#4f5bd5"
        android:text="@string/Evening"
        android:textColorHighlight="#112C42"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Noon" />

    <Button
        android:id="@+id/Night"
        android:layout_width="292dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#4f5bd5"
        android:text="@string/Night"
        android:textColorHighlight="#112C42"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Evening" />

    <TextView
        android:id="@+id/Dose"
        android:layout_width="274dp"
        android:layout_height="54dp"
        android:text="@string/Dose"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>