<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.view.password_fragment.view.AskingForPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp">


        <TextView
            android:id="@+id/textView2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.108"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="36sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerPasswordText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:autofillHints="@string/password"
            android:ems="10"
            android:inputType="textEmailAddress">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRegisterPasswordText"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/password"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerReEnterPasswordText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:autofillHints="@string/re_enter_password"
            android:ems="10"
            android:inputType="textEmailAddress">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRegisterReEnterPasswordText"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/re_enter_password"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/signUpLeftArrowTwo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="116dp"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.099"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerReEnterPasswordText"
            app:layout_constraintVertical_bias="0.368" />

        <Button
            android:id="@+id/signUpRightArrowTwo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="120dp"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.806"
            app:layout_constraintStart_toEndOf="@+id/signUpLeftArrowTwo"
            app:layout_constraintTop_toBottomOf="@+id/registerReEnterPasswordText"
            app:layout_constraintVertical_bias="0.356" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>